# retail-matching-engine

./: .gitignore  Dynamic_Retail_Scraping_Classification_Pipeline_Report.docx  README.md  data.csv  pyproject.toml  sample_data.csv
data/features/: features_link1.jsonl  features_link2.jsonl
data/output/: comparison_results.jsonl  comparison_results.xlsx  match_diffs.jsonl
data/raw/: link1_raw.jsonl  link2_raw.jsonl
src/: app.py  index.html  pipeline.py  step0_scraper.py  step1_extractor.py  step2_matcher.py  step3_classifier.py  utils.py
