[project]
name = "product-comparison"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.44",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "httpx[http2]>=0.27",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "imagehash>=4.3",
    "Pillow>=10.3",
    "rapidfuzz>=3.9",
    "rich>=13.7",
    "pint>=0.24",
    "curl-cffi>=0.15.0",
    "nodriver>=0.50.3",
    "fastapi>=0.138.0",
    "uvicorn>=0.49.0",
    "loguru>=0.7.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
